Fixed z-index ordering

--- a/public/css/single.less
+++ b/public/css/single.less
@@ -401,7 +401,7 @@
 
 
 .laps {
-  z-index: 99999;
+  z-index: 6;
   
 
   h2 {
