--- a/public/css/style.less
+++ b/public/css/style.less
@@ -249,7 +249,6 @@ canvas.track-source {
     z-index: 999999;
   }
 
-
   &[mode=under] {
     opacity: .1;
   }
@@ -430,7 +429,7 @@ canvas.track-source {
 
 .tree {
   position: absolute;
-  height: 75px;
+  height: 60px;
   width: 45px;
   top: -45px;
   left: 45px;
@@ -716,6 +715,7 @@ canvas.track-source {
   justify-items: center;
   opacity: 0;
   transition: opacity .25s ease-out;
+  z-index: 10;
 
   .message {
     width: 100%;
@@ -956,7 +956,7 @@ nav {
   background: #8dd140;
   background-image: linear-gradient(-35deg,  #00a14b, #8dd140);
   // background: #cc8215;
-  z-index: 5;
+  z-index: 10;
   overflow: auto;
 
   h1 {
@@ -1145,8 +1145,8 @@ nav {
       .track-thumbnail-wrapper {
         position: absolute;
         top: 0;
-        left: 0;
-        width: 100%;
+        left: 15%;
+        width: 70%;
         height: 75%;
         background-size: contain;
         background-position: center;
